[tool.poetry]
name = "icart-backend"
version = "0.1.0"
description = ""
authors = ["arash3f <arash.alfooneh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
fastapi = "^0.103.2"
requests = "^2.31.0"
smsir-python = "^1.0.7"
kavenegar = "^1.1.2"
sqlalchemy = "^2.0.21"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.7"
minio = "^7.1.16"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
