[tool.poetry]
name = "icarts-back"
version = "0.1.0"
description = ""
authors = ["maziar <maziarmozafarpour96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.1.3"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
requests = "^2.31.0"
smsir-python = "^1.0.7"
kavenegar = "^1.1.2"
sqlalchemy = "^2.0.23"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
uvicorn = {version = "^0.24.0.post1", extras = ["standard"]}
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.9"
minio = "^7.2.0"
gunicorn = "^21.2.0"
alembic = "^1.12.1"
orjson = "^3.9.10"
python-multipart = "^0.0.6"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
asyncpg = "^0.29.0"
pytz = "^2023.3.post1"
jdatetime = "^4.1.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
