[tool.poetry]
name = "icart-backend"
version = "0.1.0"
description = ""
authors = ["arash3f <arash.alfooneh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
fastapi = "^0.103.2"
requests = "^2.31.0"
smsir-python = "^1.0.7"
kavenegar = "^1.1.2"
sqlalchemy = "^2.0.21"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.7"
minio = "^7.1.16"
gunicorn = "^21.2.0"
alembic = "^1.12.0"
orjson = "^3.9.7"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.28.0"
pytz = "^2023.3.post1"
jdatetime = "^4.1.1"
openpyxl = "^3.1.2"
pandas = "^2.1.3"
pydantic-extra-types = "^2.1.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.215.1"}


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
